kubernetes/istio-prometheus-tls.yaml
# ServiceEntry: Alloy spricht <LGTM-HOST>:9090 per IP direkt an (kein DNS-Name nötig).
# "addresses" + resolution: NONE fängt Traffic anhand der Ziel-IP ab (Istio-Pattern für
# TLS-Origination zu einer reinen IP-Adresse).
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-prometheus
  namespace: monitoring
spec:
  hosts:
    - prometheus.lgtm.external
  addresses:
    - <LGTM-HOST>/32
  location: MESH_EXTERNAL
  ports:
    - number: 9090
      name: http-prometheus
      protocol: HTTP
  resolution: NONE
---
# DestinationRule: originiert TLS zum externen Prometheus und validiert dessen Zertifikat
# gegen die CA aus dem Secret "prometheus-ca-cert".
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: prometheus-tls-origination
  namespace: monitoring
spec:
  host: prometheus.lgtm.external
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 9090
        tls:
          mode: SIMPLE
          credentialName: prometheus-ca-cert
